--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "16.4.5",
-    "ejs": "3.1.10",
-    "express": "4.21.0"
+    "express": "4.21.0",
+    "mongoose": "^8.7.0"
   }
 }
